--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ classifiers = [
     "License :: OSI Approved :: MIT License"
 ]
 dependencies = [
+    "dvc>=3.59.2",
+    "kaggle>=1.7.4.5",
     "pip",
     "python-dotenv",
     "ruff",
