--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,11 @@ classifiers = [
 dependencies = [
     "dvc>=3.59.2",
     "kaggle>=1.7.4.5",
+    "opencv-python>=4.11.0.86",
     "pip",
     "python-dotenv",
     "ruff",
+    "ultralytics>=8.3.146",
 ]
 requires-python = "~=3.10.0"
 
